--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,8 +1,9 @@
 @Misc{orban-siqueira-solvertest-2021,
   author = {D. Orban and A. S. Siqueira and {contributors}},
-  title = {{SolverTest.jl}: Test functions for JSO-compliant solvers},
+  title = {{SolverTest.jl}: {T}est functions for {JSO}-compliant solvers},
   month = {March},
   howpublished = {\url{https://github.com/JuliaSmoothOptimizers/SolverTest.jl}},
   year = {2021},
-  DOI = {---}
+  doi = {10.5281/zenodo.7124427},
+  howpublished = {\url{https://doi.org/10.5281/zenodo.7124427}}
 }
